--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+bin/
+gflogs/
+logs/
+sqllogs/
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
@@ -23,3 +27,6 @@ go.work.sum
 
 # env file
 .env
+
+#GoLand
+.idea/
